* fixed overflow x for footer

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 #videoIntro {
     min-width: 100%;
     min-height: 100%;
